--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t risabhsharma71/docker-react -f dockerfile.dev
+  - docker build -t risabhsharma71/docker-react -f dockerfile.dev .
 
 script:
   - docker run risabhsharma71/docker-react npm run test -- --coverage
